--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ body {
  /* Main */
 .container {
 	display: grid;
-	grid-template-columns: 10% auto 10%;
+	grid-template-columns: 10% 80% 10%;
 }
 
 .content {
@@ -381,10 +381,37 @@ body {
 	padding-right: 40px;
 }
 
+/* Horizontal Scroll */
+.horizontalscrollnav {
+	display: none;
+	justify-content: flex-start;
+	gap: 10px;
+	padding: 10px;
+	background-color: #333;
+	overflow-x: auto;
+  	white-space: nowrap;
+	position: -webkit-sticky;
+	position: sticky;
+	font-size: 0.8em;
+	top: 51px;
+}
+.horizontalscrollnav a {
+	color: white;
+	text-align: center;
+	padding: 10px;
+	border-radius: 10px;
+	text-decoration: none;
+	border: 1px solid whitesmoke;
+	background-color: #121212;
+}
+
 @media only screen and (max-width: 1000px) {
 	.container {
-		grid-template-columns: 50px 1fr 50px;
+		grid-template-columns: 2% 96% 2%;
 	}
+	#menuToggle {
+  		display: none;
+	}	
 	.topnav a {
 		font-size: 0.8em;
 	}
@@ -431,6 +458,9 @@ body {
 		padding: 0;
 		width: 432px;
 		height: 252px;
+	}
+	.horizontalscrollnav {
+		display: flex;
 	}
 }
 
